# truncus

./: .gitignore  Cargo.toml  README.md  wrangler.jsonc
scripts/: install.sh  setup.sh
truncus-cli/: Cargo.toml
truncus-cli/src/: install.rs  main.rs
truncus-core/: Cargo.toml
truncus-core/src/: chunk.rs  client.rs  config.rs  dto.rs  lib.rs  project.rs  textview.rs  timefmt.rs  transcript.rs
truncus-core/tests/: chunk_test.rs  transcript_test.rs
truncus-hook/: Cargo.toml
truncus-hook/src/: capture.rs  main.rs  session_end.rs  session_start.rs
truncus-mcp/: Cargo.toml
truncus-mcp/src/: main.rs  server.rs
truncus-web/: .gitignore  package.json  tsconfig.json  tsr.config.json  vite.config.ts
truncus-web/src/: main.tsx  routeTree.gen.ts  router.tsx  theme.css
truncus-web/src/components/: loading-skeletons.tsx  markdown.tsx
truncus-web/src/components/ui/: button.tsx  card.tsx  dialog.tsx  empty-state.tsx  input.tsx  label.tsx  pagination.tsx  select.tsx  skeleton.tsx  sonner.tsx  table.tsx
truncus-web/src/libs/api/: client.ts  types.ts
truncus-web/src/libs/auth/: token.ts
truncus-web/src/libs/format/: index.ts
truncus-web/src/routes/: __root.tsx
truncus-web/src/routes/_authenticated/_components/: app-sidebar.tsx  mobile-nav.tsx
truncus-web/src/routes/_authenticated/_constants/: nav.ts
truncus-web/src/routes/_authenticated/_hooks/: use-sign-out.ts
truncus-web/src/routes/_authenticated/knowledge/: index.tsx
truncus-web/src/routes/_authenticated/knowledge/_components/: clear-knowledge-dialog.tsx  knowledge-results.tsx  note-list.tsx  note-viewer.tsx
truncus-web/src/routes/_authenticated/lessons/: index.tsx
truncus-web/src/routes/_authenticated/overview/: index.tsx
truncus-web/src/routes/_authenticated/sessions/: index.tsx
truncus-web/src/routes/_public/login/: index.tsx
truncus-worker/: Cargo.toml  wrangler.jsonc
truncus-worker/migrations/: 0001_init.sql  0002_lessons.sql  0003_lesson_embeddings.sql  0004_notes.sql  0005_note_content.sql  0006_session_updated.sql
truncus-worker/src/: ai.rs  auth.rs  db.rs  db_lessons.rs  db_notes.rs  db_read.rs  handlers.rs  lib.rs  notes.rs  pipeline.rs  reflect.rs  vectorize.rs
truncus-worker/src/handlers/: ingest.rs  lessons.rs  notes.rs  read.rs
web/: .env.example  .env.production  README.md  index.html  package.json  wrangler.jsonc
web/src/: styles.css
web/src/components/: status-badge.tsx
web/src/components/ui/: badge.tsx  tabs.tsx
web/src/lib/: utils.ts
web/src/libs/: build-info.ts
web/src/libs/api/: client.ts
web/src/libs/tanstack-query/: index.ts
web/src/routes/: index.tsx
web/src/routes/_authenticated/: route.tsx
web/src/routes/_authenticated/search/: index.tsx
web/src/routes/_authenticated/sessions/: index.tsx
web/src/routes/_public/: route.tsx
(+17 files in other folders)
