[workspace]
resolver = "2"
members = [
  "truncus-core",
  "truncus-mcp",
  "truncus-hook",
  "truncus-worker",
  "truncus-cli",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
truncus-core = { path = "truncus-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "s"
