[package]
name = "truncus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "truncus"
path = "src/main.rs"

[dependencies]
truncus-core = { workspace = true, features = ["client"] }
clap = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros", "rt"] }
dirs = "6"
