[package]
name = "truncus-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["client"]
client = ["dep:reqwest", "dep:toml", "dep:dirs", "dep:thiserror"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { version = "0.3", features = ["parsing"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls", "webpki-roots", "http2"], optional = true }
toml = { version = "0.9", optional = true }
dirs = { version = "6", optional = true }
thiserror = { workspace = true, optional = true }
