[package]
name = "truncus-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
truncus-core = { workspace = true, features = ["client"] }
rmcp = { version = "2", features = ["server", "macros", "transport-io"] }
serde = { workspace = true }
schemars = "1"
anyhow = { workspace = true }
tokio = { workspace = true }
