[package]
name = "truncus-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
serde = { workspace = true }
serde_json = { workspace = true }
truncus-core = { workspace = true }
console_error_panic_hook = "0.1"
